--- a/index.html
+++ b/index.html
@@ -1,112 +1,156 @@
 <!DOCTYPE html>
 <html lang="uk">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WebStudio</title>
-  </head>
 
-  <body>
-    <!-- Шапка сайту -->
-    <header>
-      <nav>
-        <a href="/">WebStudio</a>
-        <ul>
-          <li>
-            <a href="/">Студія</a>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>WebStudio</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="./css/styles.css" />
+</head>
+
+<body>
+  <!-- Шапка сайту -->
+  <header class="header">
+    <div class="container header-container">
+      <nav class="menu">
+        <a class="header-logo logo" href="#"><span>Web</span>Studio</a>
+        <ul class="menu-list">
+          <li class="menu-item">
+            <a class="menu-link" href="#">Студія</a>
           </li>
-          <li>
-            <a href="/">Портфоліо</a>
+          <li class="menu-item">
+            <a class="menu-link" href="./portfolio.html">Портфоліо</a>
           </li>
-          <li>
-            <a href="/">Контакти</a>
+          <li class="menu-item">
+            <a class="menu-link" href="#">Контакти</a>
           </li>
         </ul>
       </nav>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+380961111111">+38 096 111 11 11</a>
-    </header>
+      <ul class="connection-nav-header">
+        <li class="connection-item">
+          <a class="header-link main-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li class="connection-item">
+          <a class="header-link main-link" href="tel:+380961111111">+38 096 111 11 11</a>
+        </li>
+      </ul>
+    </div>
+  </header>
 
-    <main>
-      <!-- Герой -->
-      <section>
-        <h1>Ефективні рішення для вашого бізнесу</h1>
-        <button type="button">Замовити послугу</button>
-      </section>
+  <main class="main-page">
+    <!-- Герой -->
+    <section class="hero">
+      <div class="container">
+        <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+        <button class="hero-btn" type="button">Замовити послугу</button>
+      </div>
+    </section>
 
-      <!-- Переваги -->
-      <section>
-        <h2>Переваги</h2>
-        <ul>
-          <li>
-            <h3>Увага до деталей</h3>
-            <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+    <!-- Переваги -->
+    <section class="benefits">
+      <div class="container">
+        <h2 class="benefits-title">Переваги</h2>
+        <ul class="benefits-list">
+          <li class="benefits-item">
+            <h3 class="benefits-item-title">Увага до деталей</h3>
+            <p class="benefits-item-text">
+              Ідейні міркування, і навіть початок повсякденної роботи з
+              формування позиції.
+            </p>
           </li>
-          <li>
-            <h3>Пунктуальність</h3>
-            <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+          <li class="benefits-item">
+            <h3 class="benefits-item-title">Пунктуальність</h3>
+            <p class="benefits-item-text">
+              Завдання організації, особливо рамки і місце навчання кадрів
+              тягне у себе.
+            </p>
           </li>
-          <li>
-            <h3>Планування</h3>
-            <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+          <li class="benefits-item">
+            <h3 class="benefits-item-title">Планування</h3>
+            <p class="benefits-item-text">
+              Так само консультація з широким активом значною мірою зумовлює.
+            </p>
           </li>
-          <li>
-            <h3>Сучасні технології</h3>
-            <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+          <li class="benefits-item">
+            <h3 class="benefits-item-title">Сучасні технології</h3>
+            <p class="benefits-item-text">
+              Значимість цих проблем настільки очевидна, що реалізація
+              планових завдань.
+            </p>
           </li>
         </ul>
-      </section>
+      </div>
+    </section>
 
-      <!-- Чим ми займаємося -->
-      <section>
-        <h2>Чим ми займаємося</h2>
-        <ul>
-          <li>
-            <img src="./images/box1.jpg" alt="Хлопець пише код" width="370" />
+    <!-- Чим ми займаємося -->
+    <section class="about">
+      <div class="container">
+        <h2 class="about-title title">Чим ми займаємося</h2>
+        <ul class="about-list">
+          <li class="about-item">
+            <img class="about-img" src="./images/box1.jpg" alt="Хлопець пише код" width="370" />
           </li>
-          <li>
-            <img src="./images/box2.jpg" alt="Дівчина працює за ноутбуком" width="370" />
+          <li class="about-item">
+            <img class="about-img" src="./images/box2.jpg" alt="Дівчина працює за ноутбуком" width="370" />
           </li>
-          <li>
-            <img src="./images/box3.jpg" alt="Планшет із набором кольорової палітри" width="370" />
+          <li class="about-item">
+            <img class="about-img" src="./images/box3.jpg" alt="Планшет із набором кольорової палітри" width="370" />
           </li>
         </ul>
-      </section>
+      </div>
+    </section>
 
-      <!-- Наша команда -->
-      <section>
-        <h2>Наша команда</h2>
-        <ul>
-          <li>
-            <img src="./images/team1.jpg" alt="Ігор Дем'яненко" width="270" height="260" />
-            <h3>Ігор Дем'яненко</h3>
-            <p>Product Designer</p>
+    <!-- Наша команда -->
+    <section class="team">
+      <div class="container">
+        <h2 class="team-title title">Наша команда</h2>
+        <ul class="team-list">
+          <li class="team-item">
+            <img class="team-item-img" src="./images/team1.jpg" alt="Ігор Дем'яненко" width="270" height="260" />
+            <h3 class="team-item-name">Ігор Дем'яненко</h3>
+            <p class="team-item-descr">Product Designer</p>
           </li>
-          <li>
-            <img src="./images/team2.jpg" alt="Ольга Рєпіна" width="270" height="260" />
-            <h3>Ольга Рєпіна</h3>
-            <p>Frontend Developer</p>
+          <li class="team-item">
+            <img class="team-item-img" src="./images/team2.jpg" alt="Ольга Рєпіна" width="270" height="260" />
+            <h3 class="team-item-name">Ольга Рєпіна</h3>
+            <p class="team-item-descr">Frontend Developer</p>
           </li>
-          <li>
-            <img src="./images/team3.jpg" alt="Микола Тарасов" width="270" height="260" />
-            <h3>Микола Тарасов</h3>
-            <p>Marketing</p>
+          <li class="team-item">
+            <img class="team-item-img" src="./images/team3.jpg" alt="Микола Тарасов" width="270" height="260" />
+            <h3 class="team-item-name">Микола Тарасов</h3>
+            <p class="team-item-descr">Marketing</p>
           </li>
-          <li>
-            <img src="./images/team4.jpg" alt="Михайло Єрмаков" width="270" height="260" />
-            <h3>Михайло Єрмаков</h3>
-            <p>UI Designer</p>
+          <li class="team-item">
+            <img class="team-item-img" src="./images/team4.jpg" alt="Михайло Єрмаков" width="270" height="260" />
+            <h3 class="team-item-name">Михайло Єрмаков</h3>
+            <p class="team-item-descr">UI Designer</p>
           </li>
         </ul>
-      </section>
-    </main>
-    <!-- Футер -->
-    <footer>
-      <a href="/">WebStudio</a><br />
-      <address>м. Київ, пр-т Лесі Українки, 26</address>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a> <br />
-      <a href="tel:+380961111111">+38 096 111 11 11</a>
-    </footer>
-  </body>
+      </div>
+    </section>
+  </main>
+  <!-- Футер -->
+  <footer class="footer">
+    <div class="container">
+      <a class="footer-logo logo" href="#"><span>Web</span>Studio</a>
+      <address class="footer-address">
+        м. Київ, пр-т Лесі Українки, 26
+      </address>
+      <ul class="connection-nav-footer">
+        <li class="connection-item-footer">
+          <a class="footer-link main-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li class="connection-item-footer">
+          <a class="footer-link main-link" href="tel:+380961111111">+38 096 111 11 11</a>
+        </li>
+      </ul>
+    </div>
+  </footer>
+</body>
+
 </html>
