--- a/index.html
+++ b/index.html
@@ -18,25 +18,25 @@
   <header class="header">
     <div class="container header-container">
       <nav class="menu">
-        <a class="header-logo logo" href="#"><span>Web</span>Studio</a>
-        <ul class="menu-list">
+        <a class="header-logo logo link" href="#"><span>Web</span>Studio</a>
+        <ul class="menu-list list">
           <li class="menu-item">
-            <a class="menu-link" href="#">Студія</a>
+            <a class="menu-link link" href="#">Студія</a>
           </li>
           <li class="menu-item">
-            <a class="menu-link" href="./portfolio.html">Портфоліо</a>
+            <a class="menu-link link" href="./portfolio.html">Портфоліо</a>
           </li>
           <li class="menu-item">
-            <a class="menu-link" href="#">Контакти</a>
+            <a class="menu-link link" href="#">Контакти</a>
           </li>
         </ul>
       </nav>
-      <ul class="connection-nav-header">
+      <ul class="connection-nav-header list">
         <li class="connection-item">
-          <a class="header-link main-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a class="header-link main-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
         <li class="connection-item">
-          <a class="header-link main-link" href="tel:+380961111111">+38 096 111 11 11</a>
+          <a class="header-link main-link link" href="tel:+380961111111">+38 096 111 11 11</a>
         </li>
       </ul>
     </div>
@@ -47,7 +47,7 @@
     <section class="hero">
       <div class="container">
         <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-        <button class="hero-btn" type="button">Замовити послугу</button>
+        <button class="hero-btn btn" type="button">Замовити послугу</button>
       </div>
     </section>
 
@@ -55,7 +55,7 @@
     <section class="benefits">
       <div class="container">
         <h2 class="benefits-title">Переваги</h2>
-        <ul class="benefits-list">
+        <ul class="benefits-list list">
           <li class="benefits-item">
             <h3 class="benefits-item-title">Увага до деталей</h3>
             <p class="benefits-item-text">
@@ -91,7 +91,7 @@
     <section class="about">
       <div class="container">
         <h2 class="about-title title">Чим ми займаємося</h2>
-        <ul class="about-list">
+        <ul class="about-list list">
           <li class="about-item">
             <img class="about-img" src="./images/box1.jpg" alt="Хлопець пише код" width="370" />
           </li>
@@ -109,7 +109,7 @@
     <section class="team">
       <div class="container">
         <h2 class="team-title title">Наша команда</h2>
-        <ul class="team-list">
+        <ul class="team-list list">
           <li class="team-item">
             <img class="team-item-img" src="./images/team1.jpg" alt="Ігор Дем'яненко" width="270" height="260" />
             <h3 class="team-item-name">Ігор Дем'яненко</h3>
@@ -137,16 +137,16 @@
   <!-- Футер -->
   <footer class="footer">
     <div class="container">
-      <a class="footer-logo logo" href="#"><span>Web</span>Studio</a>
+      <a class="footer-logo logo link" href="#"><span>Web</span>Studio</a>
       <address class="footer-address">
         м. Київ, пр-т Лесі Українки, 26
       </address>
-      <ul class="connection-nav-footer">
+      <ul class="connection-nav-footer list">
         <li class="connection-item-footer">
-          <a class="footer-link main-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a class="footer-link main-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
         <li class="connection-item-footer">
-          <a class="footer-link main-link" href="tel:+380961111111">+38 096 111 11 11</a>
+          <a class="footer-link main-link link" href="tel:+380961111111">+38 096 111 11 11</a>
         </li>
       </ul>
     </div>
