--- a/portfolio.html
+++ b/portfolio.html
@@ -45,30 +45,35 @@
 
   <main class="portfolio-page">
     <div class="container">
-      <ul class="portfolio-navigation list">
-        <li class="portfolio-navigation-item">
-          <button class="navigation-btn btn" type="button">Усі</button>
-        </li>
-        <li class="portfolio-navigation-item">
-          <button class="navigation-btn btn" type="button">Веб-сайти</button>
-        </li>
-        <li class="portfolio-navigation-item">
-          <button class="navigation-btn btn" type="button">Додатки</button>
-        </li>
-        <li class="portfolio-navigation-item">
-          <button class="navigation-btn btn" type="button">Дизайн</button>
-        </li>
-        <li class="portfolio-navigation-item">
-          <button class="navigation-btn btn" type="button">Маркетинг</button>
-        </li>
-      </ul>
+
+      <!-- Навігація Портфоліо -->
+
+      <nav class="portfolio-nav">
+        <ul class="portfolio-list list">
+          <li class="portfolio-navigation-item">
+            <button class="navigation-btn btn" type="button">Усі</button>
+          </li>
+          <li class="portfolio-navigation-item">
+            <button class="navigation-btn btn" type="button">Веб-сайти</button>
+          </li>
+          <li class="portfolio-navigation-item">
+            <button class="navigation-btn btn" type="button">Додатки</button>
+          </li>
+          <li class="portfolio-navigation-item">
+            <button class="navigation-btn btn" type="button">Дизайн</button>
+          </li>
+          <li class="portfolio-navigation-item">
+            <button class="navigation-btn btn" type="button">Маркетинг</button>
+          </li>
+        </ul>
+      </nav>
     </div>
 
     <!-- Продукція -->
 
     <section class="production">
       <div class="container">
-        <h2 class="production-title">Продукція</h2>
+        <h1 class="production-title">Продукція</h1>
         <ul class="production-list list">
           <li class="production-item">
             <a href="#" class="production-link link">
